--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li><b>Аэропортов</b> 241</li>
             </ul>
         </section>
-        <section class="photo-grid content__section">
+        <div class="photo-grid content__section">
             <img class="photo-grid__item" src="./images/photo-grid-train_1.jpg"
                 alt="картинка с видом из окна вагона поезда">
             <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi_2.jpg"
@@ -64,13 +64,13 @@
             <img class="photo-grid__item" src="./images/photo-grid-baikal_11.jpg"
                 alt="картинка с берегом байкала и пляжем">
             <img class="photo-grid__item" src="./images/photo-grid-ergaki_12.jpg" alt="картинка с горами в тумане">
-        </section>
+        </div>
         <section class="places content__section">
             <div class="place">
                 <h2 class="place__title">Куршская коса</h2>
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
-                    <a href="park-kosa.ru" target="_blank" class="place__website-link">
+                    <a href="park-kosa.ru" target="_blank" class="place__website-link" alt="фото куршской Косы">
                         park-kosa.ru</a>
                 </div>
                 <img src="./images/place-kosa.jpg" class="place__image">
