--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                 <h2 class="place__title">Куршская коса</h2>
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
-                    <a href="park-kosa.ru" target="_blank" class="place__website-link" alt="фото куршской Косы">
+                    <a href="park-kosa.ru" target="_blank" class="place__website-link">
                         park-kosa.ru</a>
                 </div>
-                <img src="./images/place-kosa.jpg" class="place__image">
+                <img src="./images/place-kosa.jpg" class="place__image" alt="фото куршской Косы">
                 <div class="place__text">
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
                         горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
