--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Оксана Шовкопляс">
 </head>
 
-<body class="page page__content">
+<body class="page">
     <header class="header page__header">
         <div class="header__logo"></div>
         <div>
@@ -19,7 +19,7 @@
             <a href="#" class="header__lang-link" target="_blank">En</a>
         </div>
     </header>
-    <main class="content">
+    <main class="content page__content">
         <section class="lead content__section">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
@@ -168,7 +168,7 @@
             </a>
         </section>
     </main>
-    <footer class="footer content__section">
+    <footer class="footer footer__content">
         <ul class="footer__links">
             <li class="footer__link">Карты</li>
             <li class="footer__link">Погода</li>
