--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </a>
         </section>
     </main>
-    <footer class="footer footer__content">
+    <footer class="footer">
         <ul class="footer__links">
             <li class="footer__link">Карты</li>
             <li class="footer__link">Погода</li>
