--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 
 <body class="page">
     <header class="header page__header">
-        <div class="header__logo"></div>
+        <a herf="#" class="header__logo"></a>
         <div>
-            <a href="#" class="header__lang-link" target="_blank">Ru</a>
+            <a href="#" class="header__lang-link header__lang-link_active" target="_blank">Ru</a>
             <a href="#" class="header__lang-link" target="_blank">En</a>
         </div>
     </header>
     <main class="content page__content">
-        <section class="lead content__section">
+        <section class="lead content__lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
             <img class="lead__image" src="./images/lead-polka.jpg"
                 alt="картинка с маршрутом на фоне женщины, лежащей на нижней полке плацкартного вагона поезда">
             <p class="lead__caption">ваша полка — верхняя</p>
         </section>
-        <section class="intro content__section">
+        <section class="intro content__intro">
             <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
                 провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
@@ -37,36 +37,40 @@
                 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
                 отпуска.</p>
             <ul class="intro__list">
-                <li><b>Часовых поясов</b> 11</li>
-                <li><b>Объектов природного наследия ЮНЕСКО</b> 12</li>
-                <li><b>Объектов культурного наследия ЮНЕСКО</b> 16</li>
-                <li><b>Природных заповедников</b> 105</li>
-                <li><b>Аэропортов</b> 241</li>
+                <li><span class="intro__list_bold">Часовых поясов</span> 11</li>
+                <li><span class="intro__list_bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
+                <li><span class="intro__list_bold">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+                <li><span class="intro__list_bold">Природных заповедников</span> 105</li>
+                <li><span class="intro__list_bold">Аэропортов</span> 241</li>
             </ul>
         </section>
-        <div class="photo-grid content__section">
-            <img class="photo-grid__item" src="./images/photo-grid-train_1.jpg"
-                alt="картинка с видом из окна вагона поезда">
-            <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi_2.jpg"
-                alt="картинка с горами в снегу вид сверху">
-            <img class="photo-grid__item" src="./images/photo-grid-tuman_3.jpg" alt="картинка со стогами сена в тумане">
-            <img class="photo-grid__item" src="./images/photo-grid-sochi_4.jpg"
-                alt="картинка с лесом в тумане, вид сверу">
-            <img class="photo-grid__item" src="./images/photo-grid-arisa_5.jpg"
-                alt="картинка с колесом машины на льду байкала">
-            <img class="photo-grid__item" src="./images/photo-grid-baikal_6.jpg" alt="картинка с берегомбайкала">
-            <img class="photo-grid__item" src="./images/photo-grid-elbrus_7.jpg" alt="картинка с горами">
-            <img class="photo-grid__item" src="./images/photo-grid-kondratiev_8.jpg" alt="картинка с волнорезами">
-            <img class="photo-grid__item" src="./images/photo-grid-kamchatka_9.jpg"
-                alt="картинка с горами в тумане сверху">
-            <img class="photo-grid__item" src="./images/photo-grid-kamchatka_10.jpg"
-                alt="картинка с вулканом на камчатке">
-            <img class="photo-grid__item" src="./images/photo-grid-baikal_11.jpg"
-                alt="картинка с берегом байкала и пляжем">
-            <img class="photo-grid__item" src="./images/photo-grid-ergaki_12.jpg" alt="картинка с горами в тумане">
-        </div>
-        <section class="places content__section">
-            <div class="place">
+        <ul class="photo-grid content__photo-grid">
+            <li><img class="photo-grid__item" src="./images/photo-grid-train_1.jpg"
+                    alt="картинка с видом из окна вагона поезда"></li>
+            <li><img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi_2.jpg"
+                    alt="картинка с горами в снегу вид сверху"></li>
+            <li><img class="photo-grid__item" src="./images/photo-grid-tuman_3.jpg"
+                    alt="картинка со стогами сена в тумане"></li>
+            <li><img class="photo-grid__item" src="./images/photo-grid-sochi_4.jpg"
+                    alt="картинка с лесом в тумане, вид сверу"></li>
+            <li><img class="photo-grid__item" src="./images/photo-grid-arisa_5.jpg"
+                    alt="картинка с колесом машины на льду байкала"></li>
+            <li><img class="photo-grid__item" src="./images/photo-grid-baikal_6.jpg" alt="картинка с берегомбайкала">
+            </li>
+            <li><img class="photo-grid__item" src="./images/photo-grid-elbrus_7.jpg" alt="картинка с горами"></li>
+            <li><img class="photo-grid__item" src="./images/photo-grid-kondratiev_8.jpg" alt="картинка с волнорезами">
+            </li>
+            <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka_9.jpg"
+                    alt="картинка с горами в тумане сверху"></li>
+            <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka_10.jpg"
+                    alt="картинка с вулканом на камчатке"></li>
+            <li><img class="photo-grid__item" src="./images/photo-grid-baikal_11.jpg"
+                    alt="картинка с берегом байкала и пляжем"></li>
+            <li><img class="photo-grid__item" src="./images/photo-grid-ergaki_12.jpg" alt="картинка с горами в тумане">
+            </li>
+        </ul>
+        <section class="places content__places">
+            <article class="place">
                 <h2 class="place__title">Куршская коса</h2>
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
@@ -83,12 +87,12 @@
                         наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
                         спокойствие природы и запах стального, прохладного моря.</p>
                 </div>
-            </div>
-            <div class="place">
+            </article>
+            <article class="place">
                 <h2 class="place__title">Кольский</h2>
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
-                    <a href="№" target="_blank" class="place__website-link">
+                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="place__website-link">
                         National Geographic</a>
                 </div>
                 <img src="./images/place-kolsky.jpg" class="place__image" alt="фото кольского полуострова">
@@ -102,12 +106,12 @@
                         от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться
                         с билетом в Мурманск.</p>
                 </div>
-            </div>
-            <div class="place">
+            </article>
+            <article class="place">
                 <h2 class="place__title">Алтай</h2>
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
-                    <a href="#" target="_blank" class="place__website-link">
+                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank" class="place__website-link">
                         Facebook</a>
                 </div>
                 <img src="./images/place-altai.jpg" class="place__image" alt="фото алтая">
@@ -121,8 +125,8 @@
                         увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают
                         орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
                 </div>
-            </div>
-            <div class="place">
+            </article>
+            <article class="place">
                 <h2 class="place__title">Зимний Байкал</h2>
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
@@ -138,8 +142,8 @@
                         и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
                         «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                 </div>
-            </div>
-            <div class="place">
+            </article>
+            <article class="place">
                 <h2 class="place__title">Карелия</h2>
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
@@ -158,10 +162,10 @@
                         А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все
                         знали, кто тут хозяин.</p>
                 </div>
-            </div>
+            </article>
         </section>
-        <section class="cover content__section">
-            <a href="#" target="_blank" class="cover__background">
+        <section class="cover content__cover">
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background">
                 <h2 class="cover__title">До Байкала «на собаках»</h2>
                 <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
                     на электричках.</p>
@@ -169,13 +173,13 @@
         </section>
     </main>
     <footer class="footer">
-        <ul class="footer__links">
-            <li class="footer__link">Карты</li>
-            <li class="footer__link">Погода</li>
-            <li class="footer__link">Расписание</li>
-            <li class="footer__link">Календарь</li>
-            <li class="footer__link">Путешествия</li>
-        </ul>
+        <nav class="footer__links">
+            <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+            <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+            <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+            <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+            <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+        </nav>
         <p class="footer__copyright">&copy; 2022 Оксана Шовкопляс</p>
     </footer>
 </body>
