--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body class="page">
     <header class="header page__header">
-        <a herf="#" class="header__logo"></a>
+        <a href="#" class="header__logo"></a>
         <div>
             <a href="#" class="header__lang-link header__lang-link_active" target="_blank">Ru</a>
             <a href="#" class="header__lang-link" target="_blank">En</a>
@@ -70,7 +70,7 @@
             </li>
         </ul>
         <section class="places content__places">
-            <article class="place">
+            <div class="place">
                 <h2 class="place__title">Куршская коса</h2>
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
@@ -87,12 +87,13 @@
                         наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
                         спокойствие природы и запах стального, прохладного моря.</p>
                 </div>
-            </article>
-            <article class="place">
+            </div>
+            <div class="place">
                 <h2 class="place__title">Кольский</h2>
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
-                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="place__website-link">
+                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank"
+                        class="place__website-link">
                         National Geographic</a>
                 </div>
                 <img src="./images/place-kolsky.jpg" class="place__image" alt="фото кольского полуострова">
@@ -106,12 +107,13 @@
                         от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться
                         с билетом в Мурманск.</p>
                 </div>
-            </article>
-            <article class="place">
+            </div>
+            <div class="place">
                 <h2 class="place__title">Алтай</h2>
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
-                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank" class="place__website-link">
+                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank"
+                        class="place__website-link">
                         Facebook</a>
                 </div>
                 <img src="./images/place-altai.jpg" class="place__image" alt="фото алтая">
@@ -125,8 +127,8 @@
                         увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают
                         орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
                 </div>
-            </article>
-            <article class="place">
+            </div>
+            <div class="place">
                 <h2 class="place__title">Зимний Байкал</h2>
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
@@ -142,8 +144,8 @@
                         и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
                         «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                 </div>
-            </article>
-            <article class="place">
+            </div>
+            <div class="place">
                 <h2 class="place__title">Карелия</h2>
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
@@ -162,7 +164,7 @@
                         А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все
                         знали, кто тут хозяин.</p>
                 </div>
-            </article>
+            </div>
         </section>
         <section class="cover content__cover">
             <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background">
